# oobs

./: BACKLOG.md  README.md  config.example.yaml  install.sh  pyproject.toml
commands/: oobs-note.md  oobs-tower.md  oobs.md
oobs/: config.py  helptext.py  main.py  mirror.py  vault.py
templates/: 작업보드.base
